fix: prevent layout shifts caused by scrollbar appearance

--- a/src/assets/styles/utilities/_scrollbar.css
+++ b/src/assets/styles/utilities/_scrollbar.css
@@ -1,5 +1,6 @@
 .themed-scrollbar {
   --sb-size: 5px;
+  scrollbar-gutter: stable;
 }
 
 /* Chrome / Edge / Safari */
